3B - update style table

--- a/3B-WEB/shopping-cart-checkout.html
+++ b/3B-WEB/shopping-cart-checkout.html
@@ -298,6 +298,50 @@
 							</ul>
 						</div>
 						<!-- /END ADDRESS BODY -->
+
+						<table class="table table-hover">
+							<thead>
+								<tr>
+									<th>Theo kg</th>
+									<th>Mức phí</th>
+									<th>km miễn phí</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td> < 5kg</td>
+									<td>
+										<div><label>25000đ/15km</label></div>
+										<div><label>từ km 16 thu 5000đ/km</label></div>
+									</td>
+									<td>3km</td>
+								</tr>
+								<tr>
+									<td>5kg - 10kg</td>
+									<td>
+										<div><label>25000đ/15km</label></div>
+										<div><label>từ km 16 thu 5000đ/km</label></div>
+									</td>
+									<td>2km</td>
+								</tr>
+								<tr>
+									<td>10kg - 50kg</td>
+									<td>
+										<div><label>25000đ/15km</label></div>
+										<div><label>từ km 16 thu 5000đ/km</label></div>
+									</td>
+									<td>0km</td>
+								</tr>
+								<tr>
+									<td> > 50kg</td>
+									<td>
+										<div><label>25000đ/15km</label></div>
+										<div><label>từ km 16 thu 5000đ/km</label></div>
+									</td>
+									<td>0km</td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
 				</div>
 				<!-- /END ADDRESS SHIPPING -->
