3B - update admin-order-list

--- a/3B-NEW/admin-order-list.html
+++ b/3B-NEW/admin-order-list.html
@@ -388,7 +388,7 @@
 					<form action="#" role="form">
 						<div class="box-header">
 							<h3 class="box-title">
-								Quản lý hóa đơn
+								Quản lý đơn hàng
 							</h3>
 						</div>
 						<!-- BEGIN BOX BODY -->
@@ -408,8 +408,8 @@
 													<option selected="selected">Tháng này</option>
 													<option>Hôm nay</option>
 													<option>Hôm qua</option>
-													<option>Tuần này</option>
-													<option>Tháng trước</option>
+													<option>7 ngày trước</option>
+													<option>30 ngày trước</option>
 												</select>
 											</div>
 										</div>
