3B - update admin-order-list + style

--- a/3B-NEW/admin-order-list.html
+++ b/3B-NEW/admin-order-list.html
@@ -394,10 +394,10 @@
 						<!-- BEGIN BOX BODY -->
 						<div class="box-body advertising">
 							<div class="row">
-								<div class="col-md-6">
+								<div class="col-md-12">
 									<h4>Thời gian</h4>
 									<div class="form-group time-period">
-										<div class="opt1 pull-left margin-b">
+										<div class="opt1 col-md-3">
 											<label class="radio-button pull-left no-margin pad6">
 												<input type="radio" name="opt_timeperiod" id="optionsRadios3" data-target-none="timeperiod" checked> 
 												<span class="helping-el"></span>
@@ -413,40 +413,36 @@
 												</select>
 											</div>
 										</div>
-										<div class="clearfix"></div>
-										<div class="opt2">
+
+										<div class="opt2 col-md-9">
 											<label class="radio-button">
 												<input type="radio" name="opt_timeperiod" id="optionsRadios4" data-target="timeperiod"> 
 												<span class="helping-el"></span>
 												<span class="label-text">Thiết lập ngày bắt đầu / kết thúc</span>
 											</label>
 											<div class="targetbox target_timeperiod">
-
 												<div class="input-daterange">
-													<div class="col-md-6">
-														<div class="form-group">
-															<div class="input-group small">
-																<span class="input-group-btn">
-																	<span class="btn">Từ</span>
-																</span>
-																<input type="text" class="input-sm form-control" name="start" />
-															</div>
+													<div class="form-group">
+														<div class="input-group small">
+															<span class="input-group-btn">
+																<span class="btn">Từ</span>
+															</span>
+															<input type="text" class="input-sm form-control" name="start" />
 														</div>
 													</div>
-													<div class="col-md-6">
-														<div class="form-group">
-															<div class="input-group small">
-																<span class="input-group-btn">
-																	<span class="btn">đến</span>
-																</span>
-																<input type="text" class="input-sm form-control" name="end" />
-															</div>
+
+													<div class="form-group">
+														<div class="input-group small">
+															<span class="input-group-btn">
+																<span class="btn">đến</span>
+															</span>
+															<input type="text" class="input-sm form-control" name="end" />
 														</div>
 													</div>
 												</div>
-
 											</div>
 										</div>
+										<div class="clearfix"></div>
 									</div>
 
 								</div>
