3B - update search block admin-manage-shop admin-order-list admin-product-list

--- a/3B-NEW/admin-manage-shop.html
+++ b/3B-NEW/admin-manage-shop.html
@@ -394,19 +394,14 @@
 						<!-- BEGIN BOX BODY -->
 						<div class="box-body advertising">
 							<div class="row search-block">
-								<div class="col-md-6">
-									<div class="search-block-wrap">
-										<div class="search-block-default">
-											<input type="text" name="order-code" class="form-control" placeholder="Tìm theo tên, username, số điện thoại cửa hàng">
-											<span><i class="fa fa-caret-down"></i></span>
-										</div>
-										<div class="search-block-item">
-											<input type="text" id="shop-name" name="product-name" class="form-control" placeholder="Tìm theo tên sản phẩm">
-										</div>
-									</div>
+								<div class="col-md-6 margin-b">
+									<input type="text" name="order-code" class="form-control" placeholder="Tìm theo tên, username, số điện thoại cửa hàng">
+								</div>
+								<div class="col-md-6 margin-b">
+									<input type="text" name="product-name" class="form-control" placeholder="Tìm theo tên sản phẩm">
 								</div>
 
-								<div class="col-md-2">
+								<div class="col-md-2 margin-b">
 									<a href="#" class="btn btn-flat btn-danger">Tìm kiếm</a>
 								</div>
 								<div class="clearfix"></div>
