--- a/3B-NEW/admin-order-list.html
+++ b/3B-NEW/admin-order-list.html
@@ -448,24 +448,25 @@
 								</div>
 								<div class="col-md-7">
 									<div class="row search-block">
-										<div class="col-md-10">
-											<div class="search-block-wrap">
-												<div class="search-block-default">
-													<input type="text" name="order-code" class="form-control" placeholder="Tìm theo mã đơn hàng">
-													<span><i class="fa fa-caret-down"></i></span>
-												</div>
-												<div class="search-block-item">
-													<input type="text" id="shop-name" name="product-name" class="form-control" placeholder="Theo tên shop">
-													<input type="text" id="product-name" name="product-name" class="form-control" placeholder="Theo tên sản phẩm">
-													<input type="text" id="shipping-code" name="product-name" class="form-control" placeholder="Theo mã vận đơn">
-													<input type="text" id="buyer-name" name="product-name" class="form-control" placeholder="Theo tên người mua">
-												</div>
-											</div>
+										<div class="col-md-6 margin-b">
+											<input type="text" name="order-code" class="form-control" placeholder="Tìm theo mã đơn hàng">
 										</div>
-
-										<div class="col-md-2">
+										<div class="col-md-6 margin-b">
+											<input type="text" name="shop-name" class="form-control" placeholder="Theo tên shop">
+										</div>
+										<div class="col-md-6 margin-b">
+											<input type="text" name="product-name" class="form-control" placeholder="Theo tên sản phẩm">
+										</div>
+										<div class="col-md-6 margin-b">
+											<input type="text" name="shipping-code" class="form-control" placeholder="Theo mã vận đơn">
+										</div>
+										<div class="col-md-6 margin-b">
+											<input type="text" name="buyer-name" class="form-control" placeholder="Theo tên người mua">
+										</div>
+										<div class="col-md-6 margin-b">
 											<a href="#" class="btn btn-flat btn-danger">Tìm kiếm</a>
 										</div>
+										<div class="clearfix"></div>
 									</div>
 								</div>
 								<div class="clearfix"></div>
