--- a/3B-NEW/admin-product-list.html
+++ b/3B-NEW/admin-product-list.html
@@ -399,34 +399,34 @@
 						<div class="box-body">
 							<div class="row">
 								<div class="col-md-8">
-									<div class="btn-group margin-b">
-										<a href="#" class="btn btn-default active">Tất cả</a>
-										<a href="#" class="btn btn-default">Chờ duyệt</a>
-										<a href="#" class="btn btn-default">Đã duyệt</a>
-										<a href="#" class="btn btn-default">Đã khóa</a>
+									<div class="row search-block">
+										<div class="col-md-6 margin-b">
+											<input type="text" name="order-code" class="form-control" placeholder="Tìm sản phẩm">
+										</div>
+										<div class="col-md-6 margin-b">
+											<input type="text" name="product-name" class="form-control" placeholder="Tìm theo tên shop">
+										</div>
+										<div class="col-md-6 margin-b">
+											<input type="text" name="product-name" class="form-control" placeholder="Theo username">
+										</div>
+										<div class="col-md-6 margin-b">
+											<input type="text" id="product-name" name="product-name" class="form-control" placeholder="Theo số điện thoại">
+										</div>
+
+										<div class="col-md-2 margin-b">
+											<a href="#" class="btn btn-flat btn-danger">Tìm kiếm</a>
+										</div>
+										<div class="clearfix"></div>
 									</div>
 								</div>
 								<div class="clearfix"></div>
 
 								<div class="col-md-6">
-									<div class="row search-block">
-										<div class="col-md-10">
-											<div class="search-block-wrap">
-												<div class="search-block-default">
-													<input type="text" name="order-code" class="form-control" placeholder="Tìm sản phẩm">
-													<span><i class="fa fa-caret-down"></i></span>
-												</div>
-												<div class="search-block-item">
-													<input type="text" id="shop-name" name="product-name" class="form-control" placeholder="Tìm theo tên shop">
-													<input type="text" id="shop-name" name="product-name" class="form-control" placeholder="Theo username">
-													<input type="text" id="product-name" name="product-name" class="form-control" placeholder="Theo số điện thoại">
-												</div>
-											</div>
-										</div>
-
-										<div class="col-md-2">
-											<a href="#" class="btn btn-flat btn-danger">Tìm kiếm</a>
-										</div>
+									<div class="btn-group margin-b">
+										<a href="#" class="btn btn-default active">Tất cả</a>
+										<a href="#" class="btn btn-default">Chờ duyệt</a>
+										<a href="#" class="btn btn-default">Đã duyệt</a>
+										<a href="#" class="btn btn-default">Đã khóa</a>
 									</div>
 								</div>
 								<div class="col-md-6">
