3B - update admin-statistic-report

--- a/3B-NEW/admin-statistic-report.html
+++ b/3B-NEW/admin-statistic-report.html
@@ -662,7 +662,7 @@
 												</ul>
 											</div>
 
-											<div class="col-md-5">
+											<div class="col-md-6">
 												<table class="table">
 													<tbody>
 														<tr>
@@ -680,25 +680,14 @@
 															<td><label class="no-margin"><span class="text-red">30.000.000</span></label></td>
 														</tr>
 														<tr>
-															<th colspan="2" class="text-center"><label class="no-margin">Số voucher giảm giá theo số tiền: <span class="text-black">143.000</span></label></th>
+															<th colspan="2" class="text-center"><label class="no-margin">Số voucher giảm giá theo số tiền, % đơn hàng: <span class="text-black">143.000</span></label></th>
 														</tr>
 														<tr>
 															<th><label class="no-margin"><small>Số voucher đã sử dụng:</small></label></th>
 															<td><label class="no-margin"><span class="text-black">234</span></label></td>
 														</tr>
 														<tr>
-															<th><label class="no-margin"><small>Số tiền voucher giảm theo số tiền đã dùng:</small></label></th>
-															<td><label class="no-margin"><span class="text-red">30.000.000</span></label></td>
-														</tr>
-														<tr>
-															<th colspan="2" class="text-center"><label class="no-margin">Số voucher giảm giá theo % đơn hàng: <span class="text-black">143.000</span></label></th>
-														</tr>
-														<tr>
-															<th><label class="no-margin"><small>Số voucher đã sử dụng:</small></label></th>
-															<td><label class="no-margin"><span class="text-black">234</span></label></td>
-														</tr>
-														<tr>
-															<th><label class="no-margin"><small>Số tiền voucher giảm theo % đơn hàng đã dùng:</small></label></th>
+															<th><label class="no-margin"><small>Số tiền voucher giảm theo số tiền, % đơn hàng đã dùng:</small></label></th>
 															<td><label class="no-margin"><span class="text-red">30.000.000</span></label></td>
 														</tr>
 													</tbody>
