--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -22,82 +22,86 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<h5>SEARCH</h5>
-					<ul>
-						<li><a href="home.html">Search</a></li>
-						<li><a href="search-not-found.html">Search Not Found</a></li>
-						<li><a href="search-store.html">Search Store Result</a></li>
-						<li><a href="search-product.html">Search Product Result</a></li>
-						<li><a href="search-product-by-category.html">Search Product By Category</a></li>
-					</ul>
+					<h1>OLD DESIGN</h1>
+					<div class="search">
+						<h5>SEARCH</h5>
+						<ul>
+							<li><a href="home.html">Search</a></li>
+							<li><a href="search-not-found.html">Search Not Found</a></li>
+							<li><a href="search-store.html">Search Store Result</a></li>
+							<li><a href="search-product.html">Search Product Result</a></li>
+							<li><a href="search-product-by-category.html">Search Product By Category</a></li>
+						</ul>
+					</div>
+					<div class="pages">
+						<h5>PAGES</h5>
+						<ul>
+							<li><a href="home.html">Homepage</a></li>
+							<li><a href="product-details.html">Product Details</a></li>
+							<li><a href="product-details-disabled-order.html">Product Details Disabled Order Button</a></li>
+							<li><a href="join-to-buy.html">Join To Buy</a></li>
+							<li><a href="product-related-viewall.html">Product Related View All</a></li>
+							<li><a href="store-home.html">Store Homepage</a></li>
+							<li><a href="store-all-product.html">Store All Products</a></li>
+							<li><a href="store-best-seller.html">Store Best Seller</a></li>
+							<li><a href="store-search-product-result.html">Store Search Product Result</a></li>
+							<li><a href="store-view-product-by-category.html">Store View Product By Category</a></li>
+						</ul>
+					</div>
+					<div class="p3">
+						<h5>SHOPPING CART - Phase3</h5>
+						<ul>
+							<li><a href="shopping-cart.html">Shopping Cart</a></li>
+							<li><a href="shopping-cart-empty.html">Shopping Cart Empty</a></li>
+							<li><a href="shopping-cart-voucher-selected.html">Shopping Cart Voucher Selected</a></li>
+							<li><a href="shopping-cart-checkout.html">Shopping Cart Checkout</a></li>
+							<li><a href="shopping-cart-checkout-change-address.html">Shopping Cart Checkout Change Address</a></li>
+							<li><a href="shopping-cart-checkout-by-friends.html">Shopping Cart Checkout By Friends</a></li>
+							<li><a href="shopping-cart-checkout-by-friends-error.html">Shopping Cart Checkout By Friends Error</a></li>
+						</ul>
+						<h5>BUYER RATING - Phase3</h5>
+						<ul>
+							<li><a href="buyer-rating.html">Buyer Rating</a></li>
+							<li><a href="buyer-rating-error.html">Buyer Rating Error</a></li>
+						</ul>
+					</div>
+					<div class="p5">
+						<h5>CHECKOUT - Phase5</h5>
+						<ul>
+							<li><a href="shopping-cart-checkout-select-payment.html">Shopping Cart Checkout Select Payment</a></li>
+							<li><a href="shopping-cart-checkout-select-payment-error.html">Shopping Cart Checkout Select Payment Error</a></li>
+							<li><a href="card-services.html">Card & Services</a></li>
+						</ul>
+					</div>
+					<div class="p6">
+						<h5>FLASH SALE - Phase 6</h5>
+						<ul>
+							<li><a href="home.html">Homepage Menu</a></li>
+							<li><a href="view-product-by-category.html">View Product By Category</a></li>
+							<li><a href="view-all-categories.html">View All Categories</a></li>
+							<li><a href="flash-sale.html">Flash Sale - Chatbox</a></li>
+							<li><a href="flash-sale-upcoming.html">Flash Sale Upcoming</a></li>
+							<li><a href="chatbox-search.html">Chatbox - Search</a></li>
+							<li><a href="chatbox-no-message.html">Chatbox - No message</a></li>
+						</ul>
+					</div>
+					<div class="p7">
+						<h5>Phase 7</h5>
+						<ul>
+							<li><a href="outlet.html">Outlet</a></li>
+							<li><a href="all-store.html">All Store</a></li>
+							<li><a href="brand-item.html">Brand item</a></li>
+							<li><a href="from-1k.html">From 1k</a></li>
+						</ul>
+					</div>
 				</div>
 				<div class="col-md-6">
-					<h5>PAGES</h5>
+					<h1>NEW DESIGN</h1>
 					<ul>
-						<li><a href="home.html">Homepage</a></li>
-						<li><a href="product-details.html">Product Details</a></li>
-						<li><a href="product-details-disabled-order.html">Product Details Disabled Order Button</a></li>
-						<li><a href="join-to-buy.html">Join To Buy</a></li>
-						<li><a href="product-related-viewall.html">Product Related View All</a></li>
-						<li><a href="store-home.html">Store Homepage</a></li>
-						<li><a href="store-all-product.html">Store All Products</a></li>
-						<li><a href="store-best-seller.html">Store Best Seller</a></li>
-						<li><a href="store-search-product-result.html">Store Search Product Result</a></li>
-						<li><a href="store-view-product-by-category.html">Store View Product By Category</a></li>
+						<li><a href="new_design/home-new-design.html">Home</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
-
-				<div class="col-md-6">
-					<h5>SHOPPING CART - Phase3</h5>
-					<ul>
-						<li><a href="shopping-cart.html">Shopping Cart</a></li>
-						<li><a href="shopping-cart-empty.html">Shopping Cart Empty</a></li>
-						<li><a href="shopping-cart-voucher-selected.html">Shopping Cart Voucher Selected</a></li>
-						<li><a href="shopping-cart-checkout.html">Shopping Cart Checkout</a></li>
-						<li><a href="shopping-cart-checkout-change-address.html">Shopping Cart Checkout Change Address</a></li>
-						<li><a href="shopping-cart-checkout-by-friends.html">Shopping Cart Checkout By Friends</a></li>
-						<li><a href="shopping-cart-checkout-by-friends-error.html">Shopping Cart Checkout By Friends Error</a></li>
-					</ul>
-				</div>
-				<div class="col-md-6">
-					<h5>BUYER RATING - Phase3</h5>
-					<ul>
-						<li><a href="buyer-rating.html">Buyer Rating</a></li>
-						<li><a href="buyer-rating-error.html">Buyer Rating Error</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-6">
-					<h5>CHECKOUT - Phase5</h5>
-					<ul>
-						<li><a href="shopping-cart-checkout-select-payment.html">Shopping Cart Checkout Select Payment</a></li>
-						<li><a href="shopping-cart-checkout-select-payment-error.html">Shopping Cart Checkout Select Payment Error</a></li>
-						<li><a href="card-services.html">Card & Services</a></li>
-					</ul>
-				</div>
-				<div class="col-md-6">
-					<h5>FLASH SALE - Phase 6</h5>
-					<ul>
-						<li><a href="home.html">Homepage Menu</a></li>
-						<li><a href="view-product-by-category.html">View Product By Category</a></li>
-						<li><a href="view-all-categories.html">View All Categories</a></li>
-						<li><a href="flash-sale.html">Flash Sale - Chatbox</a></li>
-						<li><a href="flash-sale-upcoming.html">Flash Sale Upcoming</a></li>
-						<li><a href="chatbox-search.html">Chatbox - Search</a></li>
-						<li><a href="chatbox-no-message.html">Chatbox - No message</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-6">
-					<h5>Phase 7</h5>
-					<ul>
-						<li><a href="outlet.html">Outlet</a></li>
-						<li><a href="all-store.html">All Store</a></li>
-						<li><a href="brand-item.html">Brand item</a></li>
-						<li><a href="from-1k.html">From 1k</a></li>
-					</ul>
-				</div>
 			</div>
 		</div>
 	</div>
