3B - update new homepage design

--- a/3B-WEB/NEW_DESIGN/home-new-design.html
+++ b/3B-WEB/NEW_DESIGN/home-new-design.html
@@ -43,12 +43,12 @@
 			<!-- BEGIN HEADER -->
 			<div class="header">
 				<div class="row">
-					<div class="col-xs-2">
+					<div class="col-md-2 col-xs-2">
 						<!-- BEGIN LOGO -->
 						<h1 class="logo txt-center"><a href="index.html"><img src="assets/icons/logo-3b.png"></a></h1>
 						<!-- /END LOGO -->
 					</div>
-					<div class="col-xs-8">
+					<div class="col-md-8 col-xs-7">
 						<!-- BEGIN SEARCH BOX -->
 						<div class="search-box">
 							<div class="input-group margin">
@@ -206,9 +206,14 @@
 						</div>
 						<!-- /END SEARCH BOX -->
 					</div>
-					<div class="col-xs-2">
+					<div class="col-md-2 col-xs-3">
 						<!-- BEGIN CART -->
 						<div class="cart txt-center">
+							<a href="view-all-categories.html" class="nav-mobile show-on-mobile">
+								<img src="assets/icons/nav-mobile.png">
+								<span>Danh Mục</span>
+							</a>
+
 							<a href="#">
 								<img src="assets/icons/cart.png">
 								<span>Giỏ hàng</span>
@@ -225,7 +230,7 @@
 
 	<!-- BEGIN MAIN HEADER -->
 	<div class="main-header">
-		<div class="content-wrapper">
+		<div class="content-wrapper container">
 			<div class="row">
 				<div class="col-md-3 custom-col hide-on-mobile">
 					<ul class="menu-container">
@@ -240,71 +245,77 @@
 								<span class="frame-icon"><img src="assets/icons/cat-icon-1.png"></span>
 								Nội Thất
 							</a>
-							<div class="sub-menu" style="position: absolute;top: 0;left: 205px;width: 680px;max-width: 680px;background: #FFF;border: 1px solid #EC5229;padding: 20px;border-radius: 12px;z-index: 99;display: flex;justify-content: flex-start;flex-wrap: wrap;">
-								<ul class="sub-items">
-									<li class="title">Footwear</li>
-									<li><a href="#">Sport shoes</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters </a></li>
-								</ul>
-								<ul class="sub-items">
-									<li class="title">Footwear</li>
-									<li><a href="#">Sport shoes</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters </a></li>
-								</ul>
-								<ul class="sub-items">
-									<li class="title">Men grooming</li>
-									<li><a href="#">Sport shoes</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters </a></li>
-								</ul>
-								<ul class="sub-items">
-									<li class="title">Footwear</li>
-									<li><a href="#">Sport shoes</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters </a></li>
-								</ul>
-								<ul class="sub-items">
-									<li class="title">Footwear</li>
-									<li><a href="#">Sport shoes</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters </a></li>
-								</ul>
-								<ul class="sub-items">
-									<li class="title">Footwear</li>
-									<li><a href="#">Sport shoes</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters </a></li>
-								</ul>
-								<ul class="sub-items">
-									<li class="title">Footwear</li>
-									<li><a href="#">Sport shoes</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters </a></li>
-								</ul>
-								<ul class="sub-items">
-									<li class="title">Footwear</li>
-									<li><a href="#">Sport shoes</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters</a></li>
-									<li><a href="#">Fomal shoes</a></li>
-									<li><a href="#">Sadals & Floaters </a></li>
-								</ul>
+							<div class="sub-menu">
+								<div class="item">
+									<ul class="sub-menu-item">
+										<li class="title">What is Lorem Ipsum?</li>
+										<li><a href="#">Lorem Ipsum</a></li>
+										<li><a href="#">is simply dummy text of the printing</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+								<div class="item">
+									<ul class="sub-menu-item">
+										<li class="title">Why do we use it?</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+								<div class="item">
+									<ul class="sub-menu-item">
+										<li class="title">Where can I get some?</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+								<div class="item">
+									<ul class="sub-menu-item">
+										<li class="title">Where does it come from?</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+								<div class="item">
+									<ul class="sub-menu-item">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+								<div class="item">
+									<ul class="sub-menu-item">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+								<div class="item">
+									<ul class="sub-menu-item">
+										<li class="title">Footwear</li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
 							</div>
 						</li>
 						<li>
@@ -363,7 +374,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="col-md-9 custom-col col-xs-12">
+				<div class="col-md-9 custom-col">
 					<div class="row">
 						<div class="col-md-10 col-xs-12">
 							<div class="banner">
@@ -430,6 +441,7 @@
 						</div>
 					</div>
 				</div>
+				<div class="clearfx"></div>
 			</div>
 		</div>
 	</div>
@@ -448,11 +460,11 @@
 							<span class="second">34</span>
 						</span>						
 					</div>
-					<a href="#" class="view-all pull-right">Xem tất cả <i class="fa fa-angle-right"></i></a>
+					<a href="#" class="view-all pull-right"><span class="hide-on-mobile">Xem tất cả</span> <i class="fa fa-angle-right"></i></a>
 					<div class="clearfix"></div>
 				</div>
 
-				<div class="col-md-12">
+				<div class="col-md-12 scroll-on-mobile">
 					<!-- BEGIN FLASH SALE -->
 					<div class="list-product homepage">
 						<!-- PRODUCT ITEM -->
@@ -695,11 +707,9 @@
 		<!-- BEGIN ADS -->
 		<div class="ads margin-b20">
 			<div class="content-wrapper bg-white pad-20 br-8">
-				<div class="scroll-on-mobile">
-					<div class="row">
-						<div class="col-xs-6"><img src="assets/images/ads-1.jpg"></div>
-						<div class="col-xs-6"><img src="assets/images/ads-1.jpg"></div>
-					</div>
+				<div class="row">
+					<div class="col-md-6"><img src="assets/images/ads-1.jpg"></div>
+					<div class="col-md-6 hide-on-mobile"><img src="assets/images/ads-1.jpg"></div>
 				</div>
 			</div>
 		</div>
@@ -757,7 +767,7 @@
 		<!-- /END LIST SEARCH -->
 
 		<!-- HOT TODAY -->
-		<div class="hot-today second margin-b20">
+		<div class="hot-today second margin-b20 hide-on-mobile">
 			<div class="content-wrapper container">
 				<div class="head-title">
 					<h3 class="txt_upercase"><img class="width-24 show-on-mobile" src="assets/icons/sun.png"> Hàng hot hôm nay</h3>
@@ -838,12 +848,155 @@
 						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+		<div class="recommend-products margin-b20">
+			<div class="content-wrapper bg-white pad-20 br-8 container">
+				<div class="head-title">
+					<h3 class="txt_upercase"><img class="width-24" src="assets/icons/sun.png"> Hàng hot hôm nay</h3>
+					<a href="#" class="show-on-mobile">Xem thêm</a>
+				</div>
 				<div class="row">
-					
+					<div class="col-5 col-sm-4 col-xs-6">
+						<!-- PRODUCT ITEM -->
+						<div class="p-item">
+							<div class="p-image">
+								<a href="#"><img src="../assets/images/img29.jpg"></a>
+							</div>
+							<div class="p-meta">
+								<div class="store-info">
+									<div class="store-name">
+										<img src="../assets/images/img30.jpg">
+										<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
+									</div>
+									<span class="rating-label">-50%</span>
+								</div>
+								<div class="p-name">
+									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
+									<span class="p-price">1.125.000 đ</span>
+								</div>
+								<div class="rating">
+									<img src="assets/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
+							</div>
+						</div>
+						<!-- /END PRODUCT ITEM -->
+					</div>
+					<div class="col-5 col-sm-4 col-xs-6">
+						<!-- PRODUCT ITEM -->
+						<div class="p-item">
+							<div class="p-image">
+								<a href="#"><img src="../assets/images/img30.jpg"></a>
+							</div>
+							<div class="p-meta">
+								<div class="store-info">
+									<div class="store-name">
+										<img src="../assets/images/img29.jpg">
+										<h5 class="wrap-line">Tên cửa hàng</h5>
+									</div>
+									<span class="rating-label">-50%</span>
+								</div>
+								<div class="p-name">
+									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
+									<span class="p-price">122.125.000 đ</span>
+								</div>
+								<div class="rating">
+									<img src="assets/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
+							</div>
+						</div>
+						<!-- /END PRODUCT ITEM -->
+					</div>
+					<div class="col-5 col-sm-4 col-xs-6">
+						<!-- PRODUCT ITEM -->
+						<div class="p-item">
+							<div class="p-image">
+								<a href="#"><img src="../assets/images/img6.png"></a>
+							</div>
+							<div class="p-meta">
+								<div class="store-info">
+									<div class="store-name">
+										<img src="../assets/images/store-logo.png">
+										<h5 class="wrap-line">Tên cửa hàng siêu ngắn</h5>
+									</div>
+									<span class="rating-label">-50%</span>
+								</div>
+								<div class="p-name">
+									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ</h4></a>
+									<span class="p-price">1.125.000 đ</span>
+								</div>
+								<div class="rating">
+									<img src="assets/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
+							</div>
+						</div>
+						<!-- /END PRODUCT ITEM -->
+					</div>
+					<div class="col-5 col-sm-4 col-xs-6">
+						<!-- PRODUCT ITEM -->
+						<div class="p-item">
+							<div class="p-image">
+								<a href="#"><img src="../assets/images/img9.png"></a>
+							</div>
+							<div class="p-meta">
+								<div class="store-info">
+									<div class="store-name">
+										<img src="../assets/images/store-logo.png">
+										<h5 class="wrap-line">Tên</h5>
+									</div>
+									<span class="rating-label">-50%</span>
+								</div>
+								<div class="p-name">
+									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ dài</h4></a>
+									<span class="p-price">1.125.000 đ</span>
+								</div>
+								<div class="rating">
+									<img src="assets/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
+							</div>
+						</div>
+						<!-- /END PRODUCT ITEM -->
+					</div>
+					<div class="col-5 col-sm-4 col-xs-6">
+						<!-- PRODUCT ITEM -->
+						<div class="p-item">
+							<div class="p-image">
+								<a href="#"><img src="../assets/images/img10.png"></a>
+							</div>
+							<div class="p-meta">
+								<div class="store-info">
+									<div class="store-name">
+										<img src="../assets/images/store-logo.png">
+										<h5 class="wrap-line">Superrrr</h5>
+									</div>
+									<span class="rating-label">-50%</span>
+								</div>
+								<div class="p-name">
+									<a href="#"><h4 class="wrap-line twoline">Tên khác nhưng dài vừa vừa</h4></a>
+									<span class="p-price">10.125.000 đ</span>
+								</div>
+								<div class="rating">
+									<img src="assets/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
+							</div>
+						</div>
+						<!-- /END PRODUCT ITEM -->
+					</div>
 				</div>
 			</div>
 		</div>
 		<!-- /END HOT TODAY -->
+		
 
 		<!-- BEGIN RECOMMEND PRODUCTS TODAY -->
 		<div class="recommend-products margin-b20">
