3B - update homepage new design

--- a/3B-WEB/NEW_DESIGN/home-new-design.html
+++ b/3B-WEB/NEW_DESIGN/home-new-design.html
@@ -441,11 +441,83 @@
 						</div>
 					</div>
 				</div>
-				<div class="clearfx"></div>
+				<div class="clearfix"></div>
 			</div>
 		</div>
 	</div>
 	<!-- /END MAIN HEADER -->
+
+	<!-- BEGIN FOOT FOR MOBILE -->
+	<div class="bg-head-mobile"><button class="btn btn-view">YÊU BẾP NGHIỆN NHÀ</button></div>
+
+	<div class="menu-mobile margin-b20">
+		<h3>Danh Mục</h3>
+		<div class="scroll-on-mobile">
+			<ul class="menu-container">
+				<li>
+					<a href="view-product-by-category.html" class="custom-wrap-1line">
+						<span class="frame-icon"><img src="assets/icons/cat-icon-1.png"></span>
+						Nội Thất
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="frame-icon"><img src="assets/icons/cat-icon-2.png"></span>
+						Thời trang nữ
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="frame-icon"><img src="assets/icons/cat-icon-3.png"></span>
+						Thời trang nam
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="frame-icon"><img src="assets/icons/cat-icon-4.png"></span>
+						Đồ lót
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="frame-icon"><img src="assets/icons/cat-icon-5.png"></span>
+						Mẹ và bé
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="frame-icon"><img src="assets/icons/cat-icon-6.png"></span>
+						Mỹ phẩm
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="frame-icon"><img src="assets/icons/cat-icon-7.png"></span>
+						Máy tính và laptop
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="frame-icon"><img src="assets/icons/cat-icon-8.png"></span>
+						Phụ kiện ôtô
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="frame-icon"><img src="assets/icons/cat-icon-9.png"></span>
+						Thực phẩm
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="frame-icon"><img src="assets/icons/cat-icon-10.png"></span>
+						Trái cây
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<!-- /END FOOT FOR MOBILE -->
 
 	<!-- BEGIN HOT TODAY -->
 	<div class="hot-today first">
@@ -850,7 +922,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="recommend-products margin-b20">
+		<div class="recommend-products margin-b20 show-on-mobile">
 			<div class="content-wrapper bg-white pad-20 br-8 container">
 				<div class="head-title">
 					<h3 class="txt_upercase"><img class="width-24" src="assets/icons/sun.png"> Hàng hot hôm nay</h3>
