3B - update new theme for some pages

--- a/3B-WEB/NEW_DESIGN/home-new-design.html
+++ b/3B-WEB/NEW_DESIGN/home-new-design.html
@@ -233,7 +233,7 @@
 		<div class="content-wrapper container">
 			<div class="row">
 				<div class="col-md-3 custom-col hide-on-mobile">
-					<ul class="menu-container">
+					<ul class="menu-container for-new-theme">
 						<li>
 							<a href="view-all-categories.html">
 								<span class="frame-icon"><img class="menu-icon" src="assets/icons/nav.png"></span>
@@ -453,7 +453,7 @@
 	<div class="menu-mobile margin-b20">
 		<h3>Danh Mục</h3>
 		<div class="scroll-on-mobile">
-			<ul class="menu-container">
+			<ul class="menu-container for-new-theme">
 				<li>
 					<a href="view-product-by-category.html" class="custom-wrap-1line">
 						<span class="frame-icon"><img src="assets/icons/cat-icon-1.png"></span>
