--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -99,6 +99,10 @@
 					<h1>NEW DESIGN</h1>
 					<ul>
 						<li><a href="NEW_DESIGN/home-new-design.html">Home</a></li>
+						<li><a href="NEW_DESIGN/store-home.html">Store Home</a></li>
+						<li><a href="NEW_DESIGN/shopping-cart.html">Shopping Cart</a></li>
+						<li><a href="NEW_DESIGN/view-product-by-category.html">View Product By Category</a></li>
+						<li><a href="NEW_DESIGN/outlet.html">Outlet</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
