3B - update home new-design

--- a/3B-WEB/NEW_DESIGN/home-new-design.html
+++ b/3B-WEB/NEW_DESIGN/home-new-design.html
@@ -32,10 +32,11 @@
 					<li><a href="#">Hỗ trợ</a></li>
 				</ul>
 				<ul>
-					<li><a href="#">Thông báo</a></li>
+					<li><a href="#">Thông báo (10)</a></li>
 					<li><a href="#">Ngôn ngữ</a></li>
 					<li><a href="#">Đăng ký</a></li>
 					<li><a href="#">Đăng nhập</a></li>
+					<li><a href="#"><img src="../assets/images/img29.jpg"><h5 class="wrap-line">Tên sử dụng siêu dài</h5></a><span class="margin-r8">/</span><a href="#">Đăng xuất</a></li>
 				</ul>
 			</div>
 			<!-- /END TOP NAV -->
@@ -209,14 +210,14 @@
 					<div class="col-md-2 col-xs-3">
 						<!-- BEGIN CART -->
 						<div class="cart txt-center">
-							<a href="view-all-categories.html" class="nav-mobile show-on-mobile">
+							<!-- <a href="view-all-categories.html" class="nav-mobile show-on-mobile">
 								<img src="assets/icons/nav-mobile.png">
 								<span>Danh Mục</span>
-							</a>
-
+							</a> -->
 							<a href="#">
 								<img src="assets/icons/cart.png">
 								<span>Giỏ hàng</span>
+								<span class="total">99</span>
 							</a>
 						</div>
 						<!-- /END CART -->
@@ -230,7 +231,7 @@
 
 	<!-- BEGIN MAIN HEADER -->
 	<div class="main-header">
-		<div class="content-wrapper container">
+		<div class="content-wrapper">
 			<div class="row">
 				<div class="col-md-3 custom-col hide-on-mobile">
 					<ul class="menu-container for-new-theme">
@@ -778,10 +779,10 @@
 
 		<!-- BEGIN ADS -->
 		<div class="ads margin-b20">
-			<div class="content-wrapper bg-white pad-20 br-8">
+			<div class="content-wrapper container bg-white pad-20 br-8">
 				<div class="row">
-					<div class="col-md-6"><img src="assets/images/ads-1.jpg"></div>
-					<div class="col-md-6 hide-on-mobile"><img src="assets/images/ads-1.jpg"></div>
+					<div class="col-xs-6"><img src="assets/images/ads-1.jpg"></div>
+					<div class="col-xs-6"><img src="assets/images/ads-1.jpg"></div>
 				</div>
 			</div>
 		</div>
