3B - update home-new-design

--- a/3B-WEB/NEW_DESIGN/home-new-design.html
+++ b/3B-WEB/NEW_DESIGN/home-new-design.html
@@ -568,14 +568,7 @@
 							</a>
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
-								<div class="product-sold">
-									<img class="icon-progress" src="assets/icons/fire.png">
-									<div class="progress">
-										<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-											<span class="sr-only">Đã bán: 12/30</span>
-										</div>
-									</div>
-								</div>
+								<a href="#" class="btn btn-view">Tìm hiểu thêm</a>
 							</div>
 						</div>
 						<!-- /END PRODUCT ITEM -->
